# sending-beats

./: .gitignore  .prettierignore  .prettierrc  2025_08_21.progress.md  AGENTS.md  CLAUDE.md  README.md  eslint.config.mjs  filter_logs.sh  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  test_device_fixes.md  tsconfig.eslint.json  tsconfig.json  turbo.json  vite.config.ts
.claude/agents/: audio-mixing-engineer.md  react-component-architect.md
.github/: README.md
.github/workflows/: claude-code-review.yml  claude.yml  quick-check.yml  test.yml
data/: sendin_beats.db
docs/: TODOS_09_13.md  application_audio_capture_design.md  outstanding_bugs.md  testing_stragy.md
docs/bugs/: audio-effects-broken.md  audio_mixer.md  audio_output_broken_after_modularization.md  audio_recording.md  effect_addition_after_removal.md  high_effects_chain_severely_limiting_audio_output.md  recording-disk-space-error.md  template.md  virtual_device_refresh-not_working.md
docs/designs/: audio_pipeline.md
docs/features/: feature_ideas.md
docs/progress_summaries/: CORE_AUDIO_DEBUGGING_SUMMARY.md  CRASH_FIXES_SUMMARY.md  test_device_fixes.md
docs/refactors/: high_priority_audio_buffer_spsc_queue_refactor.md  (+3 more)
prompts/: new_session.md
scripts/: filter_logs.sh
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src-driver/: Info.plist  Makefile  README.md
src-swift/: ScreenCaptureAudio.swift  build.sh
src-tauri/: Cargo.toml  Info.plist  build-audio-driver.sh  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: sendin_beats.db
src-tauri/driver/: SendinBeatsAudioDriver.c  build-driver.sh
src-tauri/helper/: SendinBeatsHelper.swift  build-helper.sh
src-tauri/migrations/: 001_initial_schema.sql  002_update_buffer_size.sql  003_increase_buffer_to_1024.sql  004_revert_buffer_to_512.sql  20250925133435_add_session_active_columns.sql  20250925144600_add_default_field_to_configurations.sql  20250925160002_audio_devices.sql  20250925160003_audio_effects.sql  20250925160004_audio_levels.sql  20250925160005_recordings.sql  20250925160006_broadcasts.sql  20250925171710_create_default_configuration.sql  20250925_120517_initial_schema.sql  20250926115515_device_channel_number.sql  20251008231700_remove_soft_deletes_and_audio_levels.sql  20251009120000_system_audio_state.sql
src-tauri/src/: application_audio.rs  audio.rs  coreaudio_taps.rs  icecast_source.rs  lib.rs  log.rs  main.rs  recording_service.rs  streaming.rs  streaming_service.rs  tcc_permissions.rs  types.rs
src-tauri/src/audio/: coreaudio_stream.rs  database.rs  device_monitor.rs  devices.rs  effects.rs  events.rs  file_player.rs  file_player_manager.rs  manager.rs  mixer.rs  mod.rs  streaming_bridge.rs  streams.rs  types.rs  utils.rs  vu_channel_service.rs  vu_processor.rs  vu_service.rs
src-tauri/src/audio/application_audio/: capture.rs  driver_manager.rs  ipc_client.rs  mod.rs  pid_manager.rs
src-tauri/src/audio/broadcasting/: bridge.rs  config.rs  icecast_source.rs  manager.rs  mod.rs  service.rs  streaming.rs  types.rs  utils.rs
src-tauri/src/audio/devices/: aggregate_device.rs  coreaudio_converter.rs  coreaudio_integration.rs  coreaudio_integration_example.rs  coreaudio_manager.rs  coreaudio_notifications.rs  coreaudio_stream.rs  coreaudio_usage_example.rs  device_hog.rs  device_manager.rs  enumeration.rs  health_monitoring.rs  mod.rs  monitor.rs  system_audio_router.rs  types.rs  virtual_driver.rs
src-tauri/src/audio/effects/: analyzer.rs  compressor.rs  custom_effects_chain.rs  default_effects_chain.rs  effects_chain.rs  equalizer.rs  filter.rs  limiter.rs  mod.rs
src-tauri/src/audio/file_player/: manager.rs  mod.rs  player.rs
src-tauri/src/audio/mixer/: audio_processing.rs  command_processing.rs  mixer_core.rs  mod.rs  queue_manager.rs  sample_rate_converter.rs  stream_management.rs  stream_operations.rs  timing_synchronization.rs  transformer.rs  transformer_backup.rs  types.rs  validation.rs
src-tauri/src/audio/mixer/pipeline/: audio_worker.rs  input_worker.rs  mixing_layer.rs  mod.rs  output_worker.rs  pipeline_manager.rs  queue_types.rs  resampling_accumulator.rs  temporal_sync_buffer.rs
src-tauri/src/audio/mixer/resampling/: mod.rs  r8brain.rs  rubato.rs  samplerate.rs
src-tauri/src/audio/mixer/stream_management/: audio_input_stream.rs  audio_output_stream.rs  isolated_audio_manager.rs  mod.rs  stream_manager.rs  virtual_mixer.rs
src-tauri/src/audio/recording/: encoders.rs  filename_generation.rs  mod.rs  recording_service.rs  recording_writer.rs  service.rs  silence_detection.rs  types.rs
src-tauri/src/audio/screencapture/: discovery.rs  ffi.rs  mod.rs  stream.rs
src-tauri/src/audio/tap/: application_audio.rs  core_audio_bindings.rs  core_audio_tap.rs  manager.rs  mod.rs  process_discovery.rs  types.rs  virtual_stream.rs
src-tauri/src/commands/: application_audio.rs  audio_devices.rs  audio_effects.rs  audio_effects_default.rs  configurations.rs  debug.rs  file_player.rs  icecast.rs  mixer.rs  mod.rs  recording.rs  streaming.rs  system_audio.rs  vu_channels.rs  vu_events.rs
src-tauri/src/db/: audio_device_levels.rs  audio_effects.rs  audio_mixer_configurations.rs  broadcasts.rs  configured_audio_devices.rs  mod.rs  recordings.rs  seaorm_services.rs
src-tauri/src/entities/: audio_effects_custom.rs  audio_effects_default.rs  audio_mixer_configuration.rs  configured_audio_device.rs  mod.rs  system_audio_state.rs
src-tauri/src/permissions/: mod.rs
src-tauri/tests/: README.md  audio_callback_tests.rs  audio_config_tests.rs  audio_detection_tests.rs  audio_effects_tests.rs  audio_error_path_tests.rs  audio_memory_leak_tests.rs  audio_performance_benchmarks.rs  audio_streams_tests.rs  audio_validation_tests.rs  coreaudio_device_test.rs  device_refresh_error_tests.rs  device_refresh_tests.rs  device_state_management_tests.rs  device_validation_tests.rs  effects_processing_tests.rs  level_caching_tests.rs  mixer_tests.rs  simple_test.rs  stream_management_tests.rs  tauri_command_refresh_tests.rs
templates/: bugs.md  refactors.md
(+122 files in other folders)
