[package]
name = "sendin-beats"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sendin_beats_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
base64 = "0.21"
url = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"

# Audio processing and streaming
lame = "0.1"
cpal = "0.15"              # Cross-platform audio I/O
rtrb = "0.2"               # Real-time ring buffer
rubato = "0.15"            # High-quality sample rate conversion
rustfft = "6.2"            # Fast Fourier Transform for spectrum analysis

# Database and storage
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"] }
crossbeam = "0.8"          # Lock-free data structures for audio threading

# Platform-specific audio system integration
[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-rs = "0.13"     # macOS Core Audio integration
libc = "0.2"               # System calls for thread priority
core-foundation = "0.9"   # Core Foundation framework  
coreaudio-sys = "0.2"     # Low-level Core Audio bindings

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_Media_Audio"] }  # WASAPI integration

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.7"              # ALSA integration for Linux
pulse = "0.5"             # PulseAudio integration

[dev-dependencies]
# Testing framework and utilities
tokio-test = "0.4"        # Utilities for testing async code
mockall = "0.12"          # Mock generation framework
proptest = "1.0"          # Property-based testing
serial_test = "3.0"       # Run tests serially when needed
tempfile = "3.0"          # Temporary files for testing

