[package]
name = "SendinBeats"
version = "0.1.0"
description = "Mixing, streaming, recording, broadcasting software"
authors = ["Aaron Wilson"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sendin_beats_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2.0"
base64 = "0.21"
url = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"

# Audio processing and streaming
lame = "0.1"               # MP3 encoding for recording
cpal = "0.15"              # Cross-platform audio I/O
rtrb = "0.2"               # Real-time ring buffer
spmcq = "0.1"              # Single Producer Multiple Consumer queue for output distribution
rubato = "0.16.2"            # High-quality sample rate conversion
samplerate-rs = "0.1.0"      # libsamplerate C2Rust transpiled version (no CMake needed)
r8brain-rs = "0.3"           # Professional audio resampler with continuous interpolation
rustfft = "6.2"            # Fast Fourier Transform for spectrum analysis
sysinfo = "0.30"           # System process enumeration for application audio capture

# Recording and file management
dirs = "5.0"               # Platform-specific directory paths
flac-bound = "0.3"         # FLAC encoding for high-quality recording
regex = "1.10"             # Regular expressions for filename template processing

# Audio file decoding for media player
symphonia = { version = "0.5", features = ["aac", "mp3", "isomp4", "ogg", "flac", "wav"] }
symphonia-format-ogg = "0.5"
symphonia-codec-vorbis = "0.5"

# Database and storage
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate", "uuid"] }
crossbeam = "0.8"          # Lock-free data structures for audio threading

# Platform-specific audio system integration
[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-rs = "0.13"     # macOS Core Audio integration
libc = "0.2"               # System calls for thread priority
core-foundation = "0.9"   # Core Foundation framework
core-foundation-sys = "0.8" # Core Foundation C APIs
coreaudio-sys = "0.2"     # Low-level Core Audio bindings
objc2-core-audio = { version = "0.3", features = ["AudioHardware", "objc2", "objc2-foundation"] }  # Modern Core Audio process taps
objc2-foundation = "0.3"  # Foundation types for NSArray, NSNumber
objc2 = "0.6"  # Core Objective-C 2.0 runtime

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_Media_Audio"] }  # WASAPI integration

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.7"              # ALSA integration for Linux
pulse = "0.5"             # PulseAudio integration

[dev-dependencies]
# Testing framework and utilities
tokio-test = "0.4"        # Utilities for testing async code
mockall = "0.12"          # Mock generation framework
proptest = "1.0"          # Property-based testing
serial_test = "3.0"       # Run tests serially when needed
tempfile = "3.0"          # Temporary files for testing

